# NovaCode

./: .dev-rules.md  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: build.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: agent_loop.rs  chat.rs  checkpoint.rs  command_run.rs  commands.rs  compaction.rs  hooks.rs  main.rs  mcp.rs  permissions.rs  state.rs  subagent.rs  tools.rs  web.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: lib.rs
crates/deepseek-client/: Cargo.toml
crates/deepseek-client/src/: lib.rs
crates/mcp-client/: Cargo.toml
crates/mcp-client/src/: lib.rs
crates/sandbox-runtime/: Cargo.toml
crates/sandbox-runtime/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/token-accounting/: Cargo.toml
crates/token-accounting/src/: lib.rs
crates/token-accounting/tests/: pricing.rs
crates/tool-runtime/: Cargo.toml
crates/tool-runtime/src/: lib.rs  sandbox_win.rs
